# Quantshift-swarm

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.json
alerts/: telegram_bot.py
api/: main.py  models.py
api/routes/: health.py  regime.py  signals.py
backtest/: __init__.py  engine.py  metrics.py  report_generator.py
blackswan/: __init__.py  capital_lock.py  handler.py
cleaning/: __init__.py  bot_filter.py  deduplicator.py  entity_extractor.py  source_weighter.py
config/: base.yaml  markets.yaml
dashboard/: package.json
decision/: __init__.py  agent_loop.py  explainer.py  kelly_sizer.py  signal_formatter.py
execution/: __init__.py  alpaca_adapter.py  base_executor.py  ccxt_adapter.py  signal_only.py  slippage_model.py
ingestion/: __init__.py  base.py  market_data.py  mirofish_source.py  news_source.py  onchain_source.py  pipeline.py  reddit_source.py  sec_edgar_source.py  twitter_source.py
nlp/: __init__.py  crypto_sentiment.py  factor_miner.py  finbert_engine.py  signal_aggregator.py
prediction/: __init__.py  ensemble.py  online_retrainer.py  tft_model.py  walk_forward.py  xgb_model.py
regime/: __init__.py  drift_detector.py  regime_state.py  volatility_monitor.py
scripts/: retrain.py  run_backtest.py  run_live.py  setup_mirofish.py
tests/integration/: test_full_cycle.py
tests/unit/: test_bot_filter.py  test_drift_detector.py  test_kelly_sizer.py
